// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Logo should render FooterLogo correctly 1`] = `
<div>
  <a
    class="footer__logo"
    data-testid="footer__logo"
    href="/"
  >
    <img
      alt="6 cities logo"
      class="footer__logo-link"
      height="33"
      src="img/logo.svg"
      width="64"
    />
  </a>
</div>
`;

exports[`Component: Logo should render HeaderLogo correctly 1`] = `
<div>
  <a
    class="header__logo"
    data-testid="header__logo"
    href="/"
  >
    <img
      alt="6 cities logo"
      class="header__logo-link"
      height="41"
      src="img/logo.svg"
      width="81"
    />
  </a>
</div>
`;
